@startuml
class InventoryManagementApplication {
    + main (String[])
    + start (Stage)
}

class MainWindowController {
    - @FXML Label errorDisplayLabel
    - @FXML TableColumn<ItemObject, String> itemNameColumn
    - @FXML TableColumn<ItemObject, String> itemNumberColumn
    - @FXML TableColumn<ItemObject, String> itemPriceColumn
    - @FXML TextField searchNameTextField
    - @FXML TextField searchNumberTextField
    - @FXML TableView<ItemObject> tableView
    - ListWrapper listWrapper
    - ObservableList observableList
    - AddEditWindowController addEditWindowController
    - int index
    - FileChooser fileChooser
    - File file
    - FilesInputOutput filesInputOutput
    - ListSorter listSorter

    + @FXML removeOneItemButtonPushed ()
    + @FXML addItemButtonPushed ()
    + @FXML editItemButtonPushed ()
    + @FXML removeAllItemButtonPushed ()
    + @FXML saveButtonPushed ()
    + @FXML loadButtonPushed ()
    + @FXML searchNameButtonPushed ()
    + @FXML searchNumberButtonPushed ()
    + @FXML sortByNameButtonPushed ()
    + @FXML sortByNumberButtonPushed ()
    + @FXML sortByPriceButtonPushed ()
    + @FXML showAllItemButtonPushed ()
    + initializeListWrapper (ListWrapper)
    - changeScene ()
    + initialize ()
}

class AddEditWindowController {
    - @FXML Label errorDisplayLabel
    - @FXML TextField itemNameTextField
    - @FXML TextField itemNumberTextField
    - @FXML TextField itemPriceTextField
    - @FXML Label topicLabel
    - ListWrapper listWrapper
    - int index

    + @FXML cancelButtonPushed ()
    + @FXML doneButtonPushed ()
    + initializeListWrapper (ListWrapper)
    - changeScene ()
    + boolean serialNumberValidator (List<ItemObject>, String)
    + boolean nameLengthValidator (List<ItemObject>, String)
    + boolean priceValidator (List<ItemObject>, String)
    + boolean isNumberAlreadyExisted (List<ItemObject>, String, int, boolean)
    - checkExisted(List<ItemObject>, String)
}

class FilesInputOutput {
    - Formatter writer

    + saveListAsTSV (File, List<ItemObject>)
    + saveListAsJSON (File, ListWrapper)
    + saveListAsHTML (File, List<ItemObject>)
    + List<ItemObject> loadFromTSV (File)
    + List<ItemObject> loadFromJSON (File)
    + List<ItemObject> loadFromHTML (File)
}

class ItemObject {
    - String serialNumber
    - String name
    - double price

    + ItemObject (String,String,double)
    + setSerialNumber (String)
    + setName (String)
    + setPrice (double)

    + String getSerialNumber()
    + String getName()
    + String getPrice()
    + double getPriceDouble()
}

class ListSorter {
    + sortListByName (List<ItemObject>)
    + sortListByNumber(List<ItemObject>)
    + sortListByPrice(List<ItemObject>)
}

class ListWrapper {
    - List<ItemObject> listOfItem
    - boolean isAdding
    - int index

    + setIndex (int)
    + setAdding (boolean)
    + int getIndex ()
    + List<ItemObject> getListOfItem ()
    + boolean getIsAdding ()
    + removeOneItem (int)
    + removeAllItem(List<ItemObject>)
    + addItemToList(String, String, String)
    + editItemToList(String, String, String, int)
    + List<Integer> searchName(String)
    + int searchNumber(String)
}

InventoryManagementApplication -- MainWindowController
MainWindowController -- AddEditWindowController
MainWindowController -- ListWrapper
MainWindowController -- ListSorter
MainWindowController -- FilesInputOutput
AddEditWindowController -- ListWrapper
ListWrapper -- ItemObject

@enduml